# dlt-dbt-snowflake-tutorial

./: .gitignore  Makefile  README.md  SNOWFLAKE.sql  Snowflake Setup.sql  pyproject.toml  setup.py
.devcontainer/: Dockerfile  configure_fish_shell.bash  devcontainer.json  postStartCommand.bash
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: .sqlfluff
dagster_project/: definitions.py
dagster_project/assets/: __init__.py  airbyte_assets.py
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/macros/: cents_to_dollars.sql  generate_database_name.sql  generate_schema_name.sql
dbt_project/models/datamart/: .legacy_customer_orders.sql  dim_customers.sql  dim_customers.yml  dim_locations.sql  dim_locations.yml  dim_products.sql  dim_products.yml  dim_supplies.sql  dim_supplies.yml  fact_order_items.sql  fact_order_items.yml  fact_orders.sql  fact_orders.yml  legacy_customer_orders.sql  metricflow_time_spine.sql
dbt_project/models/staging/: __sources.yml  stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
orchestration/: constants.py
orchestration/assets/: __init__.py  airbyte_assets.py  dbt_assets.py
orchestration/orchestration/: schedules.py
utils/: 1__snowflake_config_commands.sql  1__snowflake_initial_setup.sql  2__snowflake_raw_data_upload.py  2__upload_raw_data_to_snowflake.py
